# crowdfunding-platform-private

./: Cargo.toml  LICENSE  README.md  asset-manifest.json  index.html  lib.rs  package-lock.json  package.json
contracts/faucet/: lib.rs
contracts/platform/: lib.rs
contracts/tokens/bronze/: lib.rs
contracts/tokens/erc20/: lib.rs
contracts/transparent-proxy/: Cargo.toml  lib.rs
erc20/: Cargo.toml  erc20.rs
erc20-temp/: lib.rs
faucet/: Cargo.toml  lib.rs
front-end/: package-lock.json  package-lock.json.orig  package.json  tsconfig.json  tsconfig.tsbuildinfo
front-end/public/: index.html
front-end/src/: App.js  App.tsx  index.css  index.js
front-end/src/components/: Navbar.js  Sidebar.js  Sidebar.tsx
front-end/src/contracts/: faucetAbi.json
front-end/src/contracts-info/: faucet.json  faucet.ts  platform.json  token.json  token.ts
front-end/src/deployments/: deployments.tsx
front-end/src/pages/: Faucet.js  Faucet.tsx  Platform.js  Platform.tsx
front-end/src/utils/: toast-tx-wrapper.tsx
platform/: Cargo.toml  lib.rs
proxy/: Cargo.toml  lib.rs
static/css/: main.dc3d9745.css  main.dc3d9745.css.map
static/js/: 164.0f5b59db.chunk.js  164.0f5b59db.chunk.js.map  main.24f67819.js  main.3ceee700.js  main.9af3fd2e.js  main.9af3fd2e.js.LICENSE.txt  main.a3b819d5.js  main.a3b819d5.js.LICENSE.txt  main.fc724b03.js
tokens/bronze/: Cargo.toml  lib.rs
tokens/erc20/: Cargo.toml  lib.rs
tokens/gold/: Cargo.toml  lib.rs
tokens/silver/: Cargo.toml  lib.rs
