[package]
name = "faucet"
version = "5.0.0"
authors = ["Emil Tsanev"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "5.0.0", default-features = false }
erc20 = { path = "../erc20-temp", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "erc20/std",
]
ink-as-dependency = []
e2e-tests = []
