[package]
name = "platform"
version = "5.0.0"
authors = ["Nikolay Kostadinov, Emil Tsanev"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "5.0.0", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
